Fix alignment issue on inventory chart

--- a/style/style.css
+++ b/style/style.css
@@ -465,6 +465,7 @@ td{
 
 .chart-text{
 	fill: white;
+	font-size: 86%;
 }
 
 .chart-content{
